--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
         "no-console": 0,
         "react/prefer-stateless-function": "off",
         "no-use-before-define": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "no-alert": 0
     }
 }
